--- a/sentiment_analysis/templates/negative.html
+++ b/sentiment_analysis/templates/negative.html
@@ -5,7 +5,7 @@
 	<style>
 		body, html {
   height: 100%;
-  background-image:url('../images/t11.jpeg');
+  background-image:url('/static/images/t11.jpeg');
   color: white;
     /*font-size: 130%*/
   height:100%;
@@ -61,7 +61,7 @@ img {
 
 <div class="bg-text">
 <h1>Your tweet's sentiment is negative</h1>
-<img src="../images/neg.jpg">
+<img src="/static/images/neg.jpg">
 </div>
 </div> 
 
