--- a/sentiment_analysis/templates/positive.html
+++ b/sentiment_analysis/templates/positive.html
@@ -5,7 +5,7 @@
 	<style>
 		body, html {
   height: 100%;
-  background-image:url('../images/t11.jpeg');
+  background-image:url('/static/images/t11.jpeg');
   color: white;
     /*font-size: 130%*/
   height:100%;
@@ -62,7 +62,7 @@ img {
 
 <div class="bg-text">
 <h1>Your tweet's sentiment is positive</h1>
-<img src="../images/positive.jpeg">
+<img src="/static/images/positive.jpeg">
 </div>
 </div> 
 
